@@ -2,7 +2,7 @@
 x = 1
 if x:
 	a = "Tabbed"				# Aligned comments
-	if x:						# look nice
+	if x:					# look nice
 		b = "No spaces"			# when they 
-	c = "Done"					# line up.
+	c = "Done"				# line up.
 
