@@ -5,10 +5,11 @@ Change history for Coverage.py
 Version 3.2b2
 -------------
 
-- Fixed some problems syntax coloring sources with line continuations:
-  `issue 30`_.
+- Fixed some problems syntax coloring sources with line continuations and
+  source with tabs: `issue 30`_ and `issue 31`_.
   
 .. _issue 30: http://bitbucket.org/ned/coveragepy/issue/30
+.. _issue 31: http://bitbucket.org/ned/coveragepy/issue/31
 
 
 Version 3.2b1, 10 November 2009
